name:                EasyX509
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/isheff/EasyX509#readme
license:             BSD3
license-file:        LICENSE
author:              Isaac Sheff
maintainer:          isheff@cs.cornell.edu
copyright:           Cornell
category:            Research
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EasyX509
  build-depends:       base >= 4.7 && < 5
                     , tls
                     , pem
                     , cryptonite
                     , asn1-encoding
                     , x509
                     , x509-validation
                     , x509-store
                     , asn1-types
                     , crypto-pubkey-openssh
                     , crypto-pubkey-types
                     , type-iso
                     , bytestring
                     , text
                     , transformers
  default-language:    Haskell2010

executable easy-x509-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , EasyX509
  default-language:    Haskell2010

test-suite easy-x509-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , EasyX509
                     , HUnit
                     , unordered-containers
                     , cryptonite
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/isheff/EasyX509
